--- a/html/scss/event.scss
+++ b/html/scss/event.scss
@@ -1,125 +1,170 @@
-@mixin contentsTitleStyle{
-    line-height: 34px;
-    font-size: 1.5rem;
-    font-weight: 500;
-    color: #fff;
-}
-@mixin plusBtnStyle{
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 20px;
-    color: #FFF;
-}
-@mixin rankNumberStyle{
-    font-family: "Roboto", sans-serif;
-    font-style: italic;
-    font-weight: 700;
-    font-size: 3rem;
-    line-height: 56px;
-    color: #fff;
-    position: absolute;
-    top: 294px;
-    left: 0;
-    padding-left: 12px;
-    width: 100%;
-}
-@mixin movieName{
-    font-size: 1.125rem;
-    font-weight: 600;
-    line-height: 26px;
-}
-@mixin afterLine14px{
-    content: '';
-    width: 1px;
-    height: 14px;
-    background-color: #fff;
-    display: inline-block;
-}
-
-#eventMain{
-    padding: 100px 0;
-    section{
-        display: flex;
-        flex-direction: column;
-        gap: 100px;
+#subEventMain{
+    a{
+        color: #fff;
     }
-    // .mainBanner{}
-    .eventList{
-        width: 1280px;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        gap: 80px;
-        article{
-            display: flex;
-            flex-direction: column;
-            gap: 30px;
-            .titleBox{
-                .titleTop{
-                    display: flex;
-                    justify-content: space-between;
-                    align-items: center;
-                    .contentsTitle{
-                        @include contentsTitleStyle;
-                    }
-                    .plusBtn{
-                        display: flex;
-                        gap: 4px;
-                        align-items: center;
-                        span{
-                            display: block;
-                            @include plusBtnStyle;
-                        }
+    .subMainBannerBox{
+        width: 100%;
+        max-width: 1920px;
+        #mainBanner{
+            position: relative;
+            .swiper-wrapper{
+                .swiper-slide{
+                    a{
                         img{
                             display: block;
-                            width: 14px;
-                            height: 14px;
+                            width: 100%;
+                            height: 400px;
                             object-fit: cover;
-                            transform: rotate(180deg);
                         }
                     }
-                }
-                .titleBottom{
-                    color: #ccc;
                 }
             }
-            .eventContainer{
-                ul{
-                    display: flex;
-                    justify-content: space-between;
-                    li{
-                        a{
-                            display: flex;
-                            flex-direction: column;
-                            gap: 10px;
-                            img{
-                                width: 416px;
-                                height: 228px;
-                                object-fit: cover;
-                                border-radius: 14px;
-                                border: solid 1px rgb(255, 255, 255, .4);
-                                box-sizing: border-box;
-                            }
-                            .eventText{
-                                display: flex;
-                                flex-direction: column;
-                                gap: 10px;
-                                padding: 0 10px;
-                                span{
-                                    line-height: 20px;
-                                    color: #fff;
+            .swiper-button{
+                opacity: 0;
+                width: 2.625rem;
+                height: 2.625rem;
+                border-radius: 50%;
+                background-color: rgba(0, 0, 0, 0.2);
+                position: absolute;
+                top: calc(50% - 1.3125rem);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                z-index: 2;
+                button{
+                    margin-left: -6px;
+                    &::after{
+                        content: "";
+                        display: block;
+                        width: 1rem;
+                        height: 1rem;
+                        border-top: solid 2px #fff;
+                        border-right: solid 2px #fff;
+                        transform: rotate(45deg);
+                    }
+                }
+            }
+            .swiper-button.nextBtn{
+                right: 12%;
+            }
+            .swiper-button.prevBtn{
+                left: 12%;
+                transform: rotate(180deg);
+            }
+            &:hover .swiper-button{
+                opacity: 1;
+            }
+        }
+    }
+    .eventList{
+        width: 100%;
+        max-width: 1280px;
+        gap: 3.75rem;
+        padding: 100px 0;
+        article{
+            gap: 1rem;
+            padding: 40px 20px;
+            background-color: #191919;
+            border-radius: 12px;
+            .titleBox{
+                color: #fff;
+                span{
+                    h2{
+                        font-size: 1.5rem;
+                        font-weight: 700;
+                        line-height: 2rem;
+                    }
+                    p{
+                        font-size: 1.125rem;
+                        font-weight: 500;
+                        line-height: 1.625rem;
+                    }
+                }
+            }
+            > div{
+                position: relative;
+                .eventContainer{
+                    width: 100%;
+                    max-width: 1280px;
+                    .swiper-wrapper{
+                        .swiper-slide{
+                            a{
+                                gap: .625rem;
+                                .eventImg{
+                                    > img{
+                                        border-radius: 8px;
+                                    }
+                                    .likeBtn{
+                                        position: absolute;
+                                        top: 6px;
+                                        right: 6px;
+                                        display: none;
+                                        align-items: center;
+                                        justify-content: center;
+                                        width: 36px;
+                                        height: 36px;
+                                        background-color: rgb(0, 0, 0, 0.2);
+                                        border-radius: 50%;
+                                        cursor: pointer;
+                                        transition: all 0.4s ease-in-out;
+                                        z-index: 3;
+                                        > img{
+                                            display: block;
+                                            width: 24px;
+                                            height: 24px;
+                                            object-fit: cover;
+                                        }
+                                    }
+                                    &:hover .likeBtn{
+                                        display: flex;
+                                    }
                                 }
-                                .eventName{
-                                    font-size: 1rem;
-                                    font-weight: 500;
-                                }
-                                .eventDate{
-                                    font-size: .875rem;
-                                    font-weight: 300;
+                                .eventText{
+                                    gap: .25rem;
+                                    padding: 0 .25rem;
+                                    .eventInfo{
+                                        font-size: .875rem;
+                                        font-weight: 400;
+                                        line-height: 1.25rem;
+                                        gap: .25rem;
+                                        color: #ccc;
+                                    }
+                                    .eventName{
+                                        font-size: 1rem;
+                                        font-weight: 500;
+                                        line-height: 1.5rem;
+                                        width: 100%;
+                                        white-space: nowrap;
+                                        overflow: hidden;
+                                        text-overflow: ellipsis;
+                                    }
                                 }
                             }
                         }
                     }
+                }
+                .swiper-button{
+                    width: 42px;
+                    height: 42px;
+                    border-radius: 50%;
+                    background-color: rgba(0, 0, 0, 0.2);
+                    position: absolute;
+                    top: calc(50% - 3.3125rem);
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    z-index: 2;
+                    img{
+                        width: 32px;
+                        height: 32px;
+                    }
+                }
+                .swiper-button.nextBtn{
+                    right: -21px;
+                    transform: rotate(180deg);
+                }
+                .swiper-button.prevBtn{
+                    left: -21px;
                 }
             }
         }
