--- a/html/scss/header.scss
+++ b/html/scss/header.scss
@@ -23,6 +23,15 @@ html{
 }
 
 // header
+#topContent{
+    backdrop-filter: blur(6px);
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
 .scrolledBg{
     background-color: #000 !important;
 }
@@ -74,14 +83,6 @@ html{
     z-index: 10;
     border-bottom: solid 1px rgb(255, 255, 255, .6);
     transition: all 0.2s ease-in-out;
-    &::before{
-        backdrop-filter: blur(6px);
-        content: '';
-        display: block;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-    }
     a{
         color: #fff;
     }
