--- a/html/scss/main.scss
+++ b/html/scss/main.scss
@@ -394,7 +394,7 @@
             gap: 16px;
             > li{
                 display: flex;
-                justify-content: space-between;
+                gap: 10px;
                 width: 416px;
                 height: 228px;
                 border-radius: 8px;
@@ -455,7 +455,7 @@
                     }
                 }
                 .reviewText{
-                    width: 228px;
+                    width: 100%;
                     height: 190px;
                     display: flex;
                     flex-direction: column;
