--- a/html/scss/booking.scss
+++ b/html/scss/booking.scss
@@ -1,29 +1,30 @@
 #subBooking {
     width: 100%;
     max-width: 1280px;
+    padding: 100px 0;
     .sidebar {
         width: 200px; /* 사이드바의 너비 */
-        background-color: #4CAF50;
         color: white;
         padding: 10px;
         box-sizing: border-box;
         overflow-y: auto; /* 내용이 넘칠 경우 스크롤 */
         h2 {
             text-align: center;
+            font-size: 1.5rem;
         }
         ul {
             list-style-type: none; /* 기본 리스트 스타일 제거 */
             padding: 0; /* 패딩 제거 */
             li {
                 padding: 10px;
-                background-color: #6dbf76; /* 기본 선택 항목 색상 */
+                background-color: #191919; /* 기본 선택 항목 색상 */
                 margin: 5px 0;
                 border-radius: 5px;
                 cursor: pointer;
                 transition: background-color 0.3s;
                 color: white; /* 글자색 흰색 */
                 &:hover {
-                    background-color: #5ca063; /* 마우스 오버 색상 */
+                    background-color: #333; /* 마우스 오버 색상 */
                 }
             }
         }
@@ -31,25 +32,31 @@
     
     /* 선택된 항목 색상 */
     .selected {
-        background-color: #3e7b4c; /* 선택된 항목 색상 */
+        background-color: #ccc; /* 선택된 항목 색상 */
     }
     
     .content {
         position: relative;
         flex: 1; /* 나머지 공간을 채우기 위해 flex 사용 */
         padding: 20px;
-        background-color: #f4f4f4;
         box-sizing: border-box;
-        h3 {
-            text-align: center;
+        text-align: center;
+        border: solid 1px #ccc;
+        border-radius: 10px;
+        h3,
+        h4 {
+            font-size: 1.5rem;
+            color: #fff;
+        }
+        p{
+            color: #fff;
         }
         /* 선택 결과 스타일 */
         .selection-results {
             margin-top: 20px;
             padding: 10px;
-            border: 1px solid #4CAF50;
             border-radius: 5px;
-            background-color: #e8f5e9;
+            background-color: #333;
         }
         .calendar {
             margin-top: 20px;
@@ -62,7 +69,7 @@
     .calendar-day {
         width: 40px;
         height: 40px;
-        border: 1px solid #4CAF50;
+        border: 1px solid #fff;
         border-radius: 5px;
         display: flex;
         align-items: center;
@@ -70,15 +77,16 @@
         margin: 2px;
         cursor: pointer;
         transition: background-color 0.3s;
+        color: #fff;
         &:hover {
-            background-color: #4CAF50;
-            color: white;
+            background-color: #fff;
+            color: #333;
         }
     }
     
     .selected-date {
-        background-color: #3e7b4c; /* 선택된 날짜 색상 */
-        color: white;
+        background-color: #fff; /* 선택된 날짜 색상 */
+        color: #333;
     }
     
     .time-schedule {
@@ -90,17 +98,18 @@
         padding: 0; /* 패딩 제거 */
         li {
             padding: 5px;
-            background-color: #d4edda; /* 시간 항목 색상 */
+            background-color: #333; /* 시간 항목 색상 */
+            color: #fff;
             margin: 5px 0;
             border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s;
             &:hover {
-                background-color: #c3e6cb; /* 마우스 오버 색상 */
+                background-color: #ccc; /* 마우스 오버 색상 */
             }
         }
     }
-    
+
     .sidebars-container {
         display: flex; /* 사이드바들을 수평으로 나열 */
     }
@@ -110,8 +119,8 @@
         right: 20px;
         bottom: 20px;
         padding: 10px 20px;
-        background-color: #4CAF50;
-        color: white;
+        background-color: #fff;
+        color: #333;
         border: none;
         border-radius: 5px;
         cursor: pointer;
@@ -135,6 +144,7 @@
             font-weight: 400;
             cursor: pointer;
             margin: 0 5px;
+            font-size: 1.125rem;
             &:hover {
                 color: #fff;
             }
@@ -147,37 +157,49 @@
     .content {
         display: none;
         padding: 20px;
-        background-color: white;
+        background-color: #191919;
         border-radius: 5px;
+        margin-bottom: 40px;
+        h2{
+            font-size: 1.5rem;
+            color: #fff;
+        }
+        p{
+            color: #fff;
+            margin-bottom: 40px;
+        }
         &.active {
             display: block;
         }
         .discount-info {
             margin-bottom: 30px;
             .card {
-                background-color: #fff;
-                border: 1px solid #ccc;
+                background-color: #333;
                 border-radius: 5px;
                 padding: 15px;
                 margin-bottom: 15px;
                 transition: box-shadow 0.3s;
+                color: #fff;
                 &:hover {
                     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
                 }
             }
         }
         .terms {
-            background-color: #fff;
             padding: 15px;
-            border-radius: 5px;
             margin-bottom: 20px;
+            color: #fff;
         }
     }
     .contact {
-        background-color: #fff;
+        background-color: #191919;
         padding: 15px;
         border-radius: 5px;
         margin-bottom: 20px;
+        color: #fff;
+        a{
+            color: #fff;
+        }
     }
 }
 
@@ -186,24 +208,27 @@
         text-align: center;
         margin: 20px 0;
         color: #fff;
+        font-size: 1.5rem;
     }
 
     .container {
         max-width: 900px;
         margin: 0 auto;
-        background-color: #fff;
+        background-color: #191919;
         padding: 20px;
         border-radius: 8px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         .selection {
             display: flex;
+            flex-direction: column;
             justify-content: space-between;
-            margin-bottom: 20px;
+            gap: 20px;
             div {
-                width: 48%;
+                width: 100%;
                 h2 {
                     margin-bottom: 10px;
-                    color: #4CAF50;
+                    color: #fff;
+                    font-size: 1.125rem;
                 }
             }
         }
@@ -212,25 +237,25 @@
     .buttons {
         display: flex;
         flex-wrap: wrap;
-    }
-
-    .button {
-        padding: 10px;
-        background-color: #e0e0e0;
-        margin: 5px;
-        text-align: center;
-        border-radius: 5px;
-        cursor: pointer;
-        flex: 1 1 30%;
-        transition: background-color 0.3s;
-        &:hover {
-            background-color: #bdbdbd;
+        .button {
+            padding: 10px;
+            background-color: #333;
+            color: #fff;
+            margin: 5px;
+            text-align: center;
+            border-radius: 5px;
+            cursor: pointer;
+            flex: 1 1 30%;
+            transition: background-color 0.3s;
+            &:hover {
+                background-color: #333;
+            }
         }
     }
 
     .selected {
-        background-color: #4CAF50 !important;
-        color: white;
+        background-color: #fff !important;
+        color: #000 !important;
     }
 
     .calendar {
@@ -238,20 +263,23 @@
     }
 
     .calendar h2 {
-        color: #4CAF50;
+        color: #fff;
         text-align: center;
+        font-size: 1.5rem;
     }
 
     .calendar table {
         width: 100%;
         border-collapse: collapse;
         text-align: center;
+        border: solid 1px #fff;
     }
 
     .calendar th, .calendar td {
         padding: 10px;
         border: 1px solid #ddd;
         cursor: pointer;
+        color: #fff;
     }
 
     .calendar td:hover {
@@ -259,13 +287,13 @@
     }
 
     .selected-date {
-        background-color: #4CAF50;
-        color: white;
+        background-color: #767676;
+        color: #fff;
     }
 
     .today {
-        background-color: #FFEB3B; /* 현재 날짜 배경색 */
-        color: black;
+        background-color: #fff; /* 현재 날짜 배경색 */
+        color: black !important;
     }
 
     .calendar-controls {
@@ -277,7 +305,7 @@
 
     .calendar-controls button {
         padding: 10px;
-        background-color: #4CAF50;
+        background-color: #333;
         color: white;
         border: none;
         border-radius: 5px;
@@ -286,19 +314,19 @@
     }
 
     .calendar-controls button:hover {
-        background-color: #388E3C;
+        background-color: #ccc;
     }
 
     .movie-schedule {
         display: none;
-        background-color: #fff;
+        background-color: #191919;
         padding: 20px;
         border-radius: 8px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
 
     .movie-schedule h2 {
-        color: #4CAF50;
+        color: #fff;
     }
 
     .times {
@@ -323,8 +351,14 @@
 #branchInfo{
     width: 100%;
     max-width: 1280px;
-    margin: 0 auto;
+    margin: 4rem auto;
     color: #fff;
+    h1{
+        font-size: 1.5rem;
+    }
+    h2{
+        font-size: 1.25rem;
+    }
     .tabs {
         display: flex;
         flex-wrap: wrap;
@@ -345,6 +379,10 @@
     .tab-content {
         display: none;
         margin-top: 20px;
+        padding: 20px;
+        background-color: #191919;
+        border-radius: 20px;
+        margin-bottom: 40px;
     }
     .tab-content.active {
         display: block;
@@ -352,6 +390,7 @@
     .container {
         display: flex;
         align-items: center;
+        width: 100%;
     }
     .branch-slider {
         width: 60%;
@@ -374,10 +413,9 @@
         text-align: center;
     }
     .map {
-        width: 80%;
-        height: 300px;
-        margin: 20px auto;
+        margin: 40px 0;
         border: 1px solid #ccc;
+        border-radius: 10px;
     }
 }
 
@@ -385,12 +423,15 @@
     width: 100%;
     max-width: 1280px;
     margin: 0 auto;
+    padding: 4rem 0;
     a{
         color: #fff;
     }
     h1 {
         text-align: center;
         margin-bottom: 40px;
+        color: #fff;
+        font-size: 1.5rem;
     }
     .card-container {
         display: flex;
@@ -483,34 +524,187 @@
     }
 
     .card-title {
-        font-size: 1.5em;
+        font-size: 1rem;
         text-align: center;
     }
     .card-description {
-        font-size: 1em;
+        font-size: .875rem;
         color: #ccc;
         text-align: center;
+    }
+}
+#eventRegionMain{
+        padding: 4rem 0;
+        max-width: 1280px;
+        margin: 0 auto;
+    h1 {
+        text-align: center;
+    }
+    .tab-menu {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+    }
+    .tab-menu button {
+        background-color: #f1f1f1;
+        border: none;
+        padding: 10px 20px;
+        margin: 0 10px;
+        cursor: pointer;
+        font-size: 16px;
+    }
+    // .tab-menu button.active {
+    //     background-color: #4CAF50;
+    //     color: white;
+    // }
+    .tab-content {
+        display: none;
+    }
+    .tab-content.active {
+        display: block;
+    }
+    .event-container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+    }
+    .flip-card {
+        background-color: transparent;
+        width: 300px;
+        height: 400px;
+        perspective: 1000px;
+    }
+    .flip-card-inner {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        transition: transform 0.6s;
+        transform-style: preserve-3d;
+    }
+    .flip-card:hover .flip-card-inner {
+        transform: rotateY(180deg);
+    }
+    .flip-card-front, .flip-card-back {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        backface-visibility: hidden;
+        border-radius: 10px;
+        overflow: hidden;
+    }
+    .flip-card-front {
+        background-color: #ccc;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .flip-card-front img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    .flip-card-back {
+        background-color: #31708f;
+        color: white;
+        transform: rotateY(180deg);
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .flip-card-back h2 {
+        font-size: 1.5em;
+        margin: 0 0 10px 0;
+    }
+    .flip-card-back p {
+        font-size: 1.1em;
+        margin: 5px 0;
+    }
+    .flip-card-back button {
+        margin-top: 15px;
+        padding: 10px 20px;
+        background-color: #ffffff;
+        color: #31708f;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+    .flip-card-back button:hover {
+        background-color: #255f73;
     }
 }
 
 /* 반응형 스타일 */
 @media (max-width: 1366px) {
     #subBooking,
-    #subMovieDiscount {
+    #subMovieDiscount,
+    #subsTimeTable,
+    #branchInfo,
+    #subEventCard {
         width: 100%;
         max-width: 1366px;
-        padding: 0 2.5rem;
+        padding: 4rem 2.5rem;
+    }
+    #subMovieMain {
+        .subMovieTabContent {
+            width: 100%;
+            max-width: 1366px;
+            padding: 4rem 2.5rem;
+        }
+    }
+}
+@media (max-width: 1190px) {
+    #subEventCard {
+        .card-container {
+            > li {
+                width: 33.333%;
+            }
+        }
     }
 }
 @media (max-width: 991px) {
     #subBooking,
-    #subMovieDiscount {
+    #subMovieDiscount,
+    #subsTimeTable,
+    #branchInfo,
+    #subEventCard {
         width: 100%;
         max-width: 991px;
-        padding: 0 1rem;
+        padding: 2rem 1rem;
         flex-direction: column;
-        .sidebar{
+        .sidebar {
             width: 33.333%;
+        }
+    }
+    #subMovieMain {
+        .subMovieTabContent {
+            width: 100%;
+            max-width: 991px;
+            padding: 2rem 1rem;
+            flex-direction: column;
+        }
+    }
+}
+@media (max-width: 860px) {
+    #subEventCard {
+        .card-container {
+            > li {
+                width: 50%;
+            }
+        }
+    }
+    #branchInfo {
+        .container {
+            flex-direction: column;
+            .branch-slider{
+                margin: 0;
+                width: 100%;
+            }
+            .branch-info{
+                width: 100%;
+            }
         }
     }
 }
@@ -532,6 +726,15 @@
             display: flex;
             flex-direction: column;
             .sidebar{
+                width: 100%;
+            }
+        }
+    }
+}
+@media (max-width: 550px) {
+    #subEventCard {
+        .card-container {
+            > li {
                 width: 100%;
             }
         }
